--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,6 +1,6 @@
 name: GitHub Actions Demo
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: []
+on: [push]
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
@@ -12,7 +12,16 @@ jobs:
         uses: actions/checkout@v4
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
+      - name: Instala o Newman e o report
         run: |
-          ls ${{ github.workspace }}
+          sudo npm install -g newman
+          sudo npm install -g newman-reporter-htmlextra
+      - name: Executar os testes
+        run: newman run ./postman_collection.json -e ./postman_environment.json --reporters cli, -r htmlextra --reporter-htmlextra-export ./result/Report.html
+      - name: Archive production artifacts
+        uses: actions/upload-artifact@v3
+        with:
+              name: report
+              path: ./result/Report.html
+      
       - run: echo "🍏 This job's status is ${{ job.status }}."
